--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "axios": "^1.7.7",
     "firebase": "^10.14.1",
     "prop-types": "^15.8.1",
+    "query-string": "^9.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
