--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
+    "recharts": "^2.13.3",
     "sweetalert2": "^11.14.4"
   },
   "devDependencies": {
